[OPAL-1603] Add resources go Golang SDK
