# model_permission_access_status_enum.go
@@ -1,113 +1,0 @@
-/*
- * Opal API
- *
- * Your Home For Developer Permissions.
- *
- * API version: 1.0
- * Contact: hello@opal.dev
- */
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package opal
-
-import (
-	"encoding/json"
-	"fmt"
-)
-
-// PermissionAccessStatusEnum The status of the user's access to the permission.
-type PermissionAccessStatusEnum string
-
-// List of PermissionAccessStatusEnum
-const (
-	PERMISSIONACCESSSTATUSENUM_UNAUTHORIZED PermissionAccessStatusEnum = "UNAUTHORIZED"
-	PERMISSIONACCESSSTATUSENUM_REQUESTED PermissionAccessStatusEnum = "REQUESTED"
-	PERMISSIONACCESSSTATUSENUM_AUTHORIZED PermissionAccessStatusEnum = "AUTHORIZED"
-)
-
-var allowedPermissionAccessStatusEnumEnumValues = []PermissionAccessStatusEnum{
-	"UNAUTHORIZED",
-	"REQUESTED",
-	"AUTHORIZED",
-}
-
-func (v *PermissionAccessStatusEnum) UnmarshalJSON(src []byte) error {
-	var value string
-	err := json.Unmarshal(src, &value)
-	if err != nil {
-		return err
-	}
-	enumTypeValue := PermissionAccessStatusEnum(value)
-	for _, existing := range allowedPermissionAccessStatusEnumEnumValues {
-		if existing == enumTypeValue {
-			*v = enumTypeValue
-			return nil
-		}
-	}
-
-	return fmt.Errorf("%+v is not a valid PermissionAccessStatusEnum", value)
-}
-
-// NewPermissionAccessStatusEnumFromValue returns a pointer to a valid PermissionAccessStatusEnum
-// for the value passed as argument, or an error if the value passed is not allowed by the enum
-func NewPermissionAccessStatusEnumFromValue(v string) (*PermissionAccessStatusEnum, error) {
-	ev := PermissionAccessStatusEnum(v)
-	if ev.IsValid() {
-		return &ev, nil
-	} else {
-		return nil, fmt.Errorf("invalid value '%v' for PermissionAccessStatusEnum: valid values are %v", v, allowedPermissionAccessStatusEnumEnumValues)
-	}
-}
-
-// IsValid return true if the value is valid for the enum, false otherwise
-func (v PermissionAccessStatusEnum) IsValid() bool {
-	for _, existing := range allowedPermissionAccessStatusEnumEnumValues {
-		if existing == v {
-			return true
-		}
-	}
-	return false
-}
-
-// Ptr returns reference to PermissionAccessStatusEnum value
-func (v PermissionAccessStatusEnum) Ptr() *PermissionAccessStatusEnum {
-	return &v
-}
-
-type NullablePermissionAccessStatusEnum struct {
-	value *PermissionAccessStatusEnum
-	isSet bool
-}
-
-func (v NullablePermissionAccessStatusEnum) Get() *PermissionAccessStatusEnum {
-	return v.value
-}
-
-func (v *NullablePermissionAccessStatusEnum) Set(val *PermissionAccessStatusEnum) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullablePermissionAccessStatusEnum) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullablePermissionAccessStatusEnum) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullablePermissionAccessStatusEnum(val *PermissionAccessStatusEnum) *NullablePermissionAccessStatusEnum {
-	return &NullablePermissionAccessStatusEnum{value: val, isSet: true}
-}
-
-func (v NullablePermissionAccessStatusEnum) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullablePermissionAccessStatusEnum) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
