# model_resource_access_status.go
@@ -1,0 +1,238 @@
+/*
+ * Opal API
+ *
+ * Your Home For Developer Resources.
+ *
+ * API version: 1.0
+ * Contact: hello@opal.dev
+ */
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package opal
+
+import (
+	"encoding/json"
+	"time"
+)
+
+// ResourceAccessStatus # AccessStatus Object ### Description The `AccessStatus` object is used to represent the user's access to the resource.  ### Usage Example View the `AccessStatus` for a resource/user pair to determine if the user has access to the resource.
+type ResourceAccessStatus struct {
+	// The ID of the resource.
+	ResourceId string `json:"resource_id"`
+	// The ID of the user.
+	UserId string `json:"user_id"`
+	AccessLevel *ResourceAccessLevel `json:"access_level,omitempty"`
+	Status ResourceAccessStatusEnum `json:"status"`
+	// The day and time the user's access will expire.
+	ExpirationDate NullableTime `json:"expiration_date"`
+}
+
+// NewResourceAccessStatus instantiates a new ResourceAccessStatus object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewResourceAccessStatus(resourceId string, userId string, status ResourceAccessStatusEnum, expirationDate NullableTime) *ResourceAccessStatus {
+	this := ResourceAccessStatus{}
+	this.ResourceId = resourceId
+	this.UserId = userId
+	this.Status = status
+	this.ExpirationDate = expirationDate
+	return &this
+}
+
+// NewResourceAccessStatusWithDefaults instantiates a new ResourceAccessStatus object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewResourceAccessStatusWithDefaults() *ResourceAccessStatus {
+	this := ResourceAccessStatus{}
+	return &this
+}
+
+// GetResourceId returns the ResourceId field value
+func (o *ResourceAccessStatus) GetResourceId() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.ResourceId
+}
+
+// GetResourceIdOk returns a tuple with the ResourceId field value
+// and a boolean to check if the value has been set.
+func (o *ResourceAccessStatus) GetResourceIdOk() (*string, bool) {
+	if o == nil  {
+		return nil, false
+	}
+	return &o.ResourceId, true
+}
+
+// SetResourceId sets field value
+func (o *ResourceAccessStatus) SetResourceId(v string) {
+	o.ResourceId = v
+}
+
+// GetUserId returns the UserId field value
+func (o *ResourceAccessStatus) GetUserId() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.UserId
+}
+
+// GetUserIdOk returns a tuple with the UserId field value
+// and a boolean to check if the value has been set.
+func (o *ResourceAccessStatus) GetUserIdOk() (*string, bool) {
+	if o == nil  {
+		return nil, false
+	}
+	return &o.UserId, true
+}
+
+// SetUserId sets field value
+func (o *ResourceAccessStatus) SetUserId(v string) {
+	o.UserId = v
+}
+
+// GetAccessLevel returns the AccessLevel field value if set, zero value otherwise.
+func (o *ResourceAccessStatus) GetAccessLevel() ResourceAccessLevel {
+	if o == nil || o.AccessLevel == nil {
+		var ret ResourceAccessLevel
+		return ret
+	}
+	return *o.AccessLevel
+}
+
+// GetAccessLevelOk returns a tuple with the AccessLevel field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *ResourceAccessStatus) GetAccessLevelOk() (*ResourceAccessLevel, bool) {
+	if o == nil || o.AccessLevel == nil {
+		return nil, false
+	}
+	return o.AccessLevel, true
+}
+
+// HasAccessLevel returns a boolean if a field has been set.
+func (o *ResourceAccessStatus) HasAccessLevel() bool {
+	if o != nil && o.AccessLevel != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetAccessLevel gets a reference to the given ResourceAccessLevel and assigns it to the AccessLevel field.
+func (o *ResourceAccessStatus) SetAccessLevel(v ResourceAccessLevel) {
+	o.AccessLevel = &v
+}
+
+// GetStatus returns the Status field value
+func (o *ResourceAccessStatus) GetStatus() ResourceAccessStatusEnum {
+	if o == nil {
+		var ret ResourceAccessStatusEnum
+		return ret
+	}
+
+	return o.Status
+}
+
+// GetStatusOk returns a tuple with the Status field value
+// and a boolean to check if the value has been set.
+func (o *ResourceAccessStatus) GetStatusOk() (*ResourceAccessStatusEnum, bool) {
+	if o == nil  {
+		return nil, false
+	}
+	return &o.Status, true
+}
+
+// SetStatus sets field value
+func (o *ResourceAccessStatus) SetStatus(v ResourceAccessStatusEnum) {
+	o.Status = v
+}
+
+// GetExpirationDate returns the ExpirationDate field value
+// If the value is explicit nil, the zero value for time.Time will be returned
+func (o *ResourceAccessStatus) GetExpirationDate() time.Time {
+	if o == nil || o.ExpirationDate.Get() == nil {
+		var ret time.Time
+		return ret
+	}
+
+	return *o.ExpirationDate.Get()
+}
+
+// GetExpirationDateOk returns a tuple with the ExpirationDate field value
+// and a boolean to check if the value has been set.
+// NOTE: If the value is an explicit nil, `nil, true` will be returned
+func (o *ResourceAccessStatus) GetExpirationDateOk() (*time.Time, bool) {
+	if o == nil  {
+		return nil, false
+	}
+	return o.ExpirationDate.Get(), o.ExpirationDate.IsSet()
+}
+
+// SetExpirationDate sets field value
+func (o *ResourceAccessStatus) SetExpirationDate(v time.Time) {
+	o.ExpirationDate.Set(&v)
+}
+
+func (o ResourceAccessStatus) MarshalJSON() ([]byte, error) {
+	toSerialize := map[string]interface{}{}
+	if true {
+		toSerialize["resource_id"] = o.ResourceId
+	}
+	if true {
+		toSerialize["user_id"] = o.UserId
+	}
+	if o.AccessLevel != nil {
+		toSerialize["access_level"] = o.AccessLevel
+	}
+	if true {
+		toSerialize["status"] = o.Status
+	}
+	if true {
+		toSerialize["expiration_date"] = o.ExpirationDate.Get()
+	}
+	return json.Marshal(toSerialize)
+}
+
+type NullableResourceAccessStatus struct {
+	value *ResourceAccessStatus
+	isSet bool
+}
+
+func (v NullableResourceAccessStatus) Get() *ResourceAccessStatus {
+	return v.value
+}
+
+func (v *NullableResourceAccessStatus) Set(val *ResourceAccessStatus) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableResourceAccessStatus) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableResourceAccessStatus) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableResourceAccessStatus(val *ResourceAccessStatus) *NullableResourceAccessStatus {
+	return &NullableResourceAccessStatus{value: val, isSet: true}
+}
+
+func (v NullableResourceAccessStatus) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableResourceAccessStatus) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
